# modules/hotel_emp/api/model/req/create_hotel_owner_req.go
@@ -1,8 +1,8 @@
 package req
 
-type CreateUserReq struct {
+type CreateHotelOwnerReq struct {
 	FullName string `json:"full_name" validate:"required" extensions:"x-order=1"`
 	Email    string `json:"email" validate:"required,email" extensions:"x-order=2"`
-	Phone    string `json:"phone" validate:"phone" extensions:"x-order=3"`
+	Phone    string `json:"phone" validate:"required,phone" extensions:"x-order=3"`
 	Password string `json:"password" validate:"required,password" extensions:"x-order=4"`
 }
