# modules/user/api/model/req/login_user_req.go
@@ -1,6 +1,6 @@
 package req
 
 type LoginUserReq struct {
-	Email    string `json:"email" validate:"required,email"`
-	Password string `json:"password" validate:"required"`
+	Email    string `json:"email" validate:"required,email" extensions:"x-order=1"`
+	Password string `json:"password" validate:"required" extensions:"x-order=2"`
 }
