# modules/user/api/model/req/update_user_req.go
@@ -1,7 +1,7 @@
 package req
 
 type UpdateUserReq struct {
-	FullName string `json:"full_name"`
-	Email    string `json:"email"`
-	Phone    string `json:"phone"`
+	FullName string `json:"full_name" extensions:"x-order=1"`
+	Email    string `json:"email" extensions:"x-order=2"`
+	Phone    string `json:"phone" extensions:"x-order=3"`
 }
